# point-cloud-colouring

./: CMakeLists.txt  conanfile.txt
cmake/: conanConfig.cmake
data/: CameraParameters.txt  test
data/elte_logo/: test_fn92.ply  test_fn92.xyz
data/parking_place_entry/: test_fn644.ply  test_fn644.xyz
data/parking_place_sphere/: test_fn74.ply  test_fn74.xyz
src/: CMakeLists.txt  main.cc
src/matrixreaderwriter/: CMakeLists.txt  MatrixReaderWriter.cc  MatrixReaderWriter.hh
